# nonebot-plugin-codexreg

./: .gitignore  LICENSE  README.md  pyproject.toml
nonebot_plugin_codexreg/: __init__.py  config.py  exception.py  log.py  quota.py  schemas.py  sentinel_token.py  utils.py
nonebot_plugin_codexreg/api/: __init__.py  cxauth.py  oai.py  yyds_mail.py
